Fix spacing after MC4

--- a/mc3.tex
+++ b/mc3.tex
@@ -260,7 +260,7 @@ and we implement it in BAMM using a ``global exchange scheme'' \citep{alt04}.
 % Include sufficient details for the work to be repeated
 \section*{Materials and methods}
 
-\subsection*{\MCMCMC\ and \MCMCMCMC implementation in BAMM}
+\subsection*{\MCMCMC\ and \MCMCMCMC\ implementation in BAMM}
 
 We followed \citet{alt04} for the implementation of \MCMCMC\ in BAMM.
 %
