--- a/mc3.tex
+++ b/mc3.tex
@@ -31,7 +31,7 @@
 \begin{flushleft}
 
 {\Large\textbf{Multi-core Metropolis coupled Markov chain Monte Carlo
-    for detecting rate shifts on phylogenetic trees}}
+    for detecting rate shifts on phylogenetic trees using BAMM}}
 
 % Short title must be <= 45 characters (current: 47, including spaces)
 \textbf{Short title:} Metropolis coupled MCMC for rate shift detection
