Clarify statement in Abstract

--- a/mc3.tex
+++ b/mc3.tex
@@ -85,8 +85,8 @@ In addition, we describe multi-core \MCMCMC\ [\MCMCMCMC]
 which runs each chain on a separate computer processor.
 
 \textbf{3.}
-We find that in both simulated trees and an empirical tree,
-runs with \MCMCMC\ mix better than those with a single chain.
+Using both simulated phylogenetic trees and an empirical tree,
+we find that runs with \MCMCMC\ mix better than those with a single chain.
 %
 In simulated trees, convergence in runs with or without \MCMCMC\ 
 is about the same, but in the skink tree,
