Edit Background from Dan's comments

--- a/mc3.bib
+++ b/mc3.bib
@@ -14,6 +14,14 @@
     address = {Hoboken, NJ}
 }
 
+@article{nee94,
+    author = {Nee, S. and Holmes, E. C. and May, R. M. and Harvey, P. H.},
+    year = {1994},
+    title = {Extinction rates can be estimated from molecular phylogenies},
+    journal = {Philosophical Transactions of the Royal Society of London,
+        Series B: Biological Sciences}, volume = {344}, pages = {77-82}
+}
+
 @article{rab14plos,
     author = {Rabosky, D. L.}, year = {2014},
     title = {Automatic detection of key innovations, rate shifts,
