--- a/mc3.tex
+++ b/mc3.tex
@@ -123,7 +123,7 @@ and have changed through time as a result of unique historical events,
 such as environmental, phenotypic, and genetic changes.
 %
 For example, speciation could dramatically increase
-during an adaptive radiation of a species on a newly colonized island.
+during adaptive radiation on a newly colonized island.
 %
 Consequently, the phenotypic diversity of this colonizing group
 would also increase as organisms adapt and fill
@@ -131,18 +131,18 @@ the available ecological niches.
 
 
 The processes of speciation and extinction within a group of organisms
-have shaped the topology of their phylogenetic tree.
+have shaped the topology of their phylogenetic tree \citep{nee94}.
 %
 Phylogenetic trees can therefore be used to extract
 information about the complex dynamics that shaped them \citep{rab14plos}.
 %
-For example, an adaptive radiation would show up
+For example, an adaptive radiation could show up
 as a burst in the number of splits and branches on a tree.
 %
 In addition, a phylogenetic tree would likely be composed of several processes,
 each with a unique rate of diversification or morphological evolution.
 %
-A new method was recently developed to identify and characterize
+We recently developed a new method to identify and characterize
 such macroevolutionary processes across phylogenetic trees \citep{rab14plos}.
 
 
