--- a/mc3.tex
+++ b/mc3.tex
@@ -149,40 +149,45 @@ such macroevolutionary processes across phylogenetic trees \citep{rab14plos}.
 \subsection*{BAMM}
 
 BAMM (Bayesian Analysis of Macroevolutionary Mixtures)
-is a computer program that searches for models that best explain
-the complex dynamics of evolutionary processes on phylogenetic trees.
+is a computer program that simulates a posterior distribution
+of evolutionary processes on phylogenetic trees.
 %
-For speciation dynamics, a process is defined as the rate of speciation
+A process is a historical event,
+modeled by some function of parameters,
+that ultimately determines the current state of a clade.
+%
+For example, in speciation dynamics,
+a process is the rate of speciation
 modeled as an exponential function through time.
 %
 A process may occur on any branch of a tree,
 and all branches downstream of the process are under its control.
 %
 There may be multiple processes on a tree,
-and each process can have its own set of parameters.
+and each process can have its own set of parameters values.
 %
-Processes may be nested, where a process may occur
-within a clade controlled by another process.
+A process may occur within a clade controlled by another process.
 %
 In such a case, the process downstream of the ``ancestral'' process
 takes over the dynamics of the branches downstream of it.
-
-
-A BAMM model is a specific configuration of processes
-(and their parameters) on a tree.
 %
-To search for plausible models that explain the observed phylogenetic tree,
+A tree must always have a process at its root.
+
+
+BAMM simulates configurations of processes (and their parameters) on a tree.
+%
+To sample plausible configurations that explain the observed data,
 BAMM uses reversible jump Markov Chain Monte Carlo (MCMC).
 %
 This method adds or removes processes on a tree,
 moves processes from one location to another,
 or changes specific parameter values within a process
-in order to test the plausability of many models.
+in order to sample many process configurations.
 %
-The advantage of using MCMC for model searching
-is that BAMM does not produce a single best model,
-but rather a set of models and their probability
-of explaining the topology of the tree \citep{rab14plos}.
+The advantage of using MCMC
+is that BAMM does not produce a single best configuration,
+but rather a set of configurations and their probability
+of explaining the shape or data of the tree \citep{rab14plos}.
 
 
 \subsection*{Metropolis coupled MCMC}
