Change title and short title

--- a/mc3.tex
+++ b/mc3.tex
@@ -30,11 +30,11 @@
 
 \begin{flushleft}
 
-{\Large\textbf{Multi-core Metropolis coupled Markov chain Monte Carlo
-    for detecting rate shifts on phylogenetic trees using BAMM}}
+{\Large\textbf{Identifying rate shifts on phylogenetic trees using BAMM
+    with multi-core Metropolis coupled Markov chain Monte Carlo}}
 
-% Short title must be <= 45 characters (current: 47, including spaces)
-\textbf{Short title:} Metropolis coupled MCMC for rate shift detection
+% Short title must be <= 45 characters (current: 44, including spaces)
+\textbf{Short title:} BAMM with multi-core Metropolis coupled MCMC
 
 % Recommended: 6000-7000 words, including tables, figure captions, references
 \textbf{Word count:} 3,218
