Make minor changes to the Background

--- a/mc3.tex
+++ b/mc3.tex
@@ -118,8 +118,9 @@ The variation in species richness and phenotypic diversity we see today
 across groups of organisms is partly due to the stochastic
 evolutionary processes of speciation and extinction \citep{rab14plos}.
 %
-Rates of speciation and extinction differ among groups
-and have changed through time as a result of unique historical events,
+Rates of speciation, extinction, and phenotypic evolution
+have changed through time and among groups
+as a result of unique historical events,
 such as environmental, phenotypic, and genetic changes.
 %
 For example, speciation could dramatically increase
@@ -136,11 +137,12 @@ have shaped the topology of their phylogenetic tree \citep{nee94}.
 Phylogenetic trees can therefore be used to extract
 information about the complex dynamics that shaped them \citep{rab14plos}.
 %
-For example, an adaptive radiation could show up
+For example, adaptive radiation could show up
 as a burst in the number of splits and branches on a tree.
 %
-In addition, a phylogenetic tree would likely be composed of several processes,
-each with a unique rate of diversification or morphological evolution.
+In addition,
+phylogenetic trees are likely composed of several evolutionary processes,
+each with a unique rate of diversification or phenotypic evolution.
 %
 We recently developed a new method to identify and characterize
 such macroevolutionary processes across phylogenetic trees \citep{rab14plos}.
