Minor edits to BAMM section

--- a/mc3.tex
+++ b/mc3.tex
@@ -163,11 +163,12 @@ For example, in speciation dynamics,
 a process is the rate of speciation
 modeled as an exponential function through time.
 %
-Mixtures of processes are heterogeneous because each process
-is modeled independently, with their own parameter values.
+Mixtures of processes are heterogeneous because processes
+are independent---each one has its own parameter values.
 %
-Therefore, one process may indicate an increase in speciation rate,
-while another may indicate a decrease in the same tree (Figure~\ref{fig:tree}).
+Thus, one process may indicate an increase in speciation rate,
+while another may indicate a decrease in speciation rate
+within the same tree (Figure~\ref{fig:tree}).
 
 \begin{figure}
 \begin{center}
