Minor fixes to Performance section

--- a/mc3.tex
+++ b/mc3.tex
@@ -359,9 +359,9 @@ The cold chain is the chain with a temperature of 1.
 We analyzed three measures of performance for our implementation of \MCMCMC:
 (1) mixing, (2) convergence, and (3) median log-likelihood.
 %
-For our \MCMCMCMC\ implementation, we analyzed its speed.
+For our \MCMCMCMC\ implementation, we analyzed its running speed.
 %
-We tested two sets of runs, one with simulated trees
+For each analysis, we tested two sets of runs: one with simulated trees
 and the other with an empirical tree of Australian skinks \citep{rab14sysbio}.
 %
 For the simulated trees, we used 100 random trees
