--- a/mc3.tex
+++ b/mc3.tex
@@ -594,6 +594,43 @@ These result suggest that runs with \MCMCMC\
 converged better than those without \MCMCMC.
 
 
+\subsection*{Median log-likelihood}
+
+We found that for the runs with simulated trees,
+the median log-likelihood values among treatments
+were virtually identical per replicate runs (Figure \ref{fig:median-log-like}a).
+%
+These results indicate that for simulated trees,
+the MCMC simulation found the same log-likelihood space
+whether it had one, four, or eight chains.
+%
+For the skink tree runs,
+the mean median log-likelihood (and 95\% bootstrap confidence interval)
+with one chain was $-631.29$ ($-631.34$--$-631.25$),
+with four chains it was $-631.16$ ($-631.19$--$-631.12$),
+with eight chains it was $-631.12$ ($-631.15$--$-631.08$)
+(Figure \ref{fig:median-log-like}b).
+%
+These results indicate that the MCMC simulation
+reached a higher log-likelihood space
+(i.e., more probable shift configurations)
+with \MCMCMC\ than without it.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=14cm]{median-log-like.pdf}
+\end{center}
+\caption{Median log-likelihoods for (a) runs of 100 simulated trees
+    and (b) 25 runs of the skink tree.
+    Each solid circle represents the median log-likelihood of a single run.
+    In (a), lines connect runs with the same simulated tree.
+    In (b), the thick lines are the mean of the median log-likelihoods
+    and the thin lines are the edges of the 95\% confidence intervals.
+    The gray circles are jittered horizontally for clarity.}
+\label{fig:median-log-like}
+\end{figure}
+
+
 \subsection*{Speed}
 
 We found that the parallellism of \MCMCMCMC\ 
